# systemf

./: Idx.hs  N.hs  TODO  Test.hs  Tm.hs  Ty.hs  systemf.cabal
Tm/: Interpret.hs  Ty.hs
Ty/: Interpret.hs  Lemmas.hs  Subst.hs  Weaken.hs
src/: Test.hs
